--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-550.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-571.7KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 未知国家-214.0KB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-757.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇨🇳 中国-571.4KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-529.8KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-316.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-571.7KB/s(Youtube:不良林)
-      - 未知国家-214.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-251.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-571.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-529.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
