--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-316.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-215.7KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-222.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-757.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-1.14MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-507.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇺🇸 美国-889.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.01MB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
   - {name: 🇯🇵 日本-600.9KB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-411.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-316.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-757.8KB/s(Youtube:不良林)
-      - 未知国家-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
